--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -84,7 +84,7 @@
                                                 </a>
                                             </ng-template>
                                         </ngx-datatable-column>
-                                        <ngx-datatable-column *ngFor="let prop of historicListProperties" [width]="prop.width" [name]="historicFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                                        <ngx-datatable-column *ngFor="let prop of historicListProperties" [width]="prop.width" [name]="historicFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                             <ng-template let-row="row" ngx-datatable-cell-template>
                                                 <span>{{_dataService.formatProperty(row[prop.field], historicFieldsDef[prop.field])}}</span>
                                             </ng-template>
