--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -92,9 +92,9 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of sitegroupListProperties"  [width]="prop.width" [name]="sitegroupFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
-                                <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <span>{{_dataService.formatProperty(row[prop.field], sitegroupFieldsDef[prop.field])}}</span>
+                            <ngx-datatable-column *ngFor="let prop of sitegroupListProperties"  [width]="prop.width" [name]="sitegroupFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
+                                <ng-template let-row="row" ngx-datatable-cell-template >
+                                    <span >{{_dataService.formatProperty(row[prop.field], sitegroupFieldsDef[prop.field])}}</span>
                                 </ng-template>
                             </ngx-datatable-column>
                         </ngx-datatable>
@@ -135,7 +135,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of siteListProperties" [width]="prop.width" [name]="siteFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of siteListProperties" [width]="prop.width" [name]="siteFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], siteFieldsDef[prop.field])}}</span>
                                 </ng-template>
@@ -176,7 +176,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], individualFieldsDef[prop.field])}}</span>
                                 </ng-template>
