--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -91,7 +91,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of siteListProperties" [width]="prop.width" [name]="siteFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of siteListProperties" [width]="prop.width" [name]="siteFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], siteFieldsDef[prop.field])}}</span>
                                 </ng-template>
@@ -132,7 +132,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], individualFieldsDef[prop.field])}}</span>
                                 </ng-template>
