--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -82,7 +82,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of visitListProperties" [width]="prop.width" [name]="visitFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of visitListProperties" [width]="prop.width" [name]="visitFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], visitFieldsDef[prop.field])}}</span>
                                 </ng-template>
@@ -113,7 +113,7 @@
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" >
+                            <ngx-datatable-column *ngFor="let prop of individualListProperties" [width]="prop.width" [name]="individualFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <span>{{_dataService.formatProperty(row[prop.field], individualFieldsDef[prop.field])}}</span>
                                 </ng-template>
