--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -62,7 +62,7 @@
                             <button class="btn btn-success float-left" [routerLink]="['sitegroup']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.sitegroup.label}}</button>
                             <button class="btn btn-primary float-right" (click)="filterDisplay = !filterDisplay" matTooltip="Afficher les critères de recherche"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
-                        <gn-cmr-filter 
+                        <gn-cmr-filter *ngIf="module.forms.sitegroup.search_filters.length > 0"
                             [class]="filterDisplay == true? 'd-block' : 'd-none'"
                             [filters]="module.forms.sitegroup.search_filters" 
                             [fieldsDef]="sitegroupFieldsDef" 
@@ -151,8 +151,14 @@
                         attr.aria-labelledby="nav-individuals-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved -->
                             <button class="btn btn-success float-left" [routerLink]="['individual']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.individual.label}}</button>
-                            <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
+                            <button class="btn btn-primary float-right" (click)="filterIndividualDisplay = !filterIndividualDisplay"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
+                        <gn-cmr-filter *ngIf="module.forms.sitegroup.search_filters.length > 0"
+                            [class]="filterIndividualDisplay == true? 'd-block' : 'd-none'"
+                            [filters]="module.forms.individual.search_filters" 
+                            [fieldsDef]="individualFieldsDef" 
+                            (onSearch)="applyIndividualSearch($event)"
+                        ></gn-cmr-filter>
                         <ngx-datatable #tableIndividual
                             class="material striped margin-top-xs"
                             [rows]="individuals"
@@ -164,7 +170,8 @@
                             [footerHeight]="50"
                             [selectionType]="'single'"
                             [selected]="selectedIndividual"
-                            (activate)="onIndividualRowClick($event)">
+                            (activate)="onIndividualRowClick($event)"
+                            [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
                             <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
