--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+    <gn-cmr-mask *ngIf="waitControl" text="Recherche en cours..."></gn-cmr-mask>
     <div class="flex-container">
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
             <div id="details">
@@ -50,6 +51,7 @@
                     <a class="nav-item nav-link active" data-toggle="tab" aria-selected="true" id="nav-visit-tab" href="#visit-tab">{{module.forms.visit.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{visits.length}}</span></a>
                     <a class="nav-item nav-link" data-toggle="tab" aria-selected="false" id="nav-individuals-tab" href="#individuals-tab">Individus<span class="badge badge-pill badge-primary ml-2">{{individuals.length}}</span></a>
                 </div>
+                <!-- TAB visits-->
                 <div class="tab-content" id="nav-tabContentRight">
                     <div class="tab-pane fade active show" id="visit-tab" role="tabpanel" attr.aria-labelledby="nav-visit-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved-->
@@ -89,10 +91,17 @@
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
+                    <!-- TAB individual -->
                     <div class="tab-pane fade" id="individuals-tab" role="tabpanel" attr.aria-labelledby="nav-individuals-tab">
                         <div class="toolbar clearfix">
-                            <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
+                            <button class="btn btn-primary float-right" (click)="filterIndividualDisplay = !filterIndividualDisplay"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
+                        <gn-cmr-filter *ngIf="module.forms.individual.search_filters.length > 0"
+                            [class]="filterIndividualDisplay == true? 'd-block' : 'd-none'"
+                            [filters]="module.forms.individual.search_filters" 
+                            [fieldsDef]="individualFieldsDef" 
+                            (onSearch)="applyIndividualSearch($event)"
+                        ></gn-cmr-filter>
                         <ngx-datatable #table
                             class="material striped margin-top-xs"
                             [rows]="individuals"
@@ -101,7 +110,8 @@
                             [count]="individuals.length"
                             [limit]="15"
                             [headerHeight]="50"
-                            [footerHeight]="50">
+                            [footerHeight]="50"
+                            [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
                             <ngx-datatable-column width="25" headerClass="col-action" cellClass="col-action">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
