--- a/frontend/app/components/common/filter/filter.component.html
+++ b/frontend/app/components/common/filter/filter.component.html
@@ -1,9 +1,10 @@
 <div class="filter-container mb-3">
-    <div class="row">
+    <small class="font-italic text-secondary"><strong>Note:</strong> La recherche est non sensible à la casse.</small>
+    <div class="row mt-2 mb-2">
         <div class="col-10">
             <div class="row">
                 <div class="col-4" *ngFor="let filter of filters">
-                    <div class="pl-1">
+                    <div class="pr-1">
                         <small>{{fieldsDef[filter].attribut_label}}</small>
                         <input type="text" class="form-control form-control-sm" [formControl]="filterForm.get(filter)">
                     </div>
